# envforge

./: .gitignore  README.md  pyproject.toml
docs/: 2026-06-19-envforge-design.md  2026-06-19-envforge-robustness-core.md  2026-06-22-envforge-plan2-browser-kind-design.md  2026-06-22-envforge-plan2-browser-kind.md  opencode.example.json
docs/superpowers/plans/: 2026-06-19-envforge-robustness-core.md
docs/superpowers/specs/: 2026-06-19-envforge-design.md
envforge/: cli.py
envforge/agents/: base.py  browser_eval.py  claude_agent.py  fakes.py  opencode_agent.py
envforge/core/: exits.py  jsonio.py  lock.py  orchestrator.py  ports.py  runstore.py  status.py
envforge/kinds/: base.py
envforge/kinds/browser_webapp/: health.py  kind.py  protocol.py  verifier.py
envforge/kinds/browser_webapp/phases/: evaluate.py  function_tasks.py  generate_app.py  health_phase.py  score.py
envforge/models/: budget.py  errors.py  fallback.py  gateway.py  openai_transport.py
envforge/phases/: base.py  demo.py  test.py
envforge/runtimes/: base.py  local.py
tests/: test_agents_fakes.py  test_browser_eval.py  test_browser_webapp_kind.py  test_budget.py  test_claude_agent.py  test_cli.py  test_errors.py  test_eval_score_phases.py  test_exits.py  test_fallback.py  test_gateway.py  test_gen_phases.py  test_health.py  test_jsonio.py  test_kind_base.py  test_local_runtime.py  test_lock.py  test_openai_transport.py  test_opencode_agent.py  test_orchestrator.py  test_ports.py  test_protocol.py  test_runstore.py  test_status.py  test_verifier.py
(+2 files in other folders)
